@@ -1,3 +1,6 @@
+Mar 23, 2020
+  parser: added handling of 'Karyotypic information' and ORDO xdb ids
+
 Feb 28, 2020
   fixed typo in assoc types
 
